--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 	padding: 0px;
 	margin: 0px;
 	box-sizing: border-box;
-	max-width: 1300px;
+	max-width: 1300px; /*rompe la galeria*/
 } 
 
 /* general */
@@ -19,8 +19,9 @@ a{
 
 body {
 	font-family: 'Wix Madefor Display', sans-serif;
-	background: #FFFFFF;
+	background: #918263;
 }
+
 
 /*------------------------------------------------------------------ HEADER Y NAV ------------------------------------------------------------------*/
 
@@ -171,6 +172,9 @@ nav ul li:hover .dropdown a:hover{
 
 /*------------------------------------------------------------------ MAIN ------------------------------------------------------------------*/
 
+main{
+	background-color: #ffffff;
+}
 
 h1, h2{
 	text-align: center;
@@ -179,6 +183,7 @@ h1, h2{
 
 .welcometext{
 	margin: 4rem;
+	margin-top: 0;
 	text-align: center;
 }
 
@@ -245,6 +250,25 @@ h1, h2{
 .redireccion_char img{
 	width: 100%;
 }
+
+.upbutton{
+	display: inline-block;
+	width: 4rem;
+	height: 3rem;
+	border-top-left-radius: 50%;
+	border-bottom-left-radius: 50%;
+	background-image: url(../images/up.png);
+	background-color: #6DB966;
+	/*background-size: contain;
+	background-repeat: no-repeat;*/
+	background-size: cover;
+	background-position: bottom;
+	position: fixed;
+	bottom: 10rem;
+	right: 0;
+}
+
+
 
 
 
@@ -358,7 +382,7 @@ footer p{
 /*FORMULARIO*/
 
 .contacto{
-	background-image: url(/images/colors.jpg);
+	background-image: url(../images/colors.jpg);
 	background-size: cover;
 	background-position: center;
 	
