--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,7 @@ nav{
 	height: 100%;
 	width: 80%;
 }
+
 nav ul{
 	list-style: none;
 	display: inline-flex;
@@ -170,27 +171,46 @@ nav ul li:hover .dropdown a:hover{
 	letter-spacing: 0.15em;
 }
 
-/*------------------------------------------------------------------ MAIN ------------------------------------------------------------------*/
+.dropdown .current{
+	background: #FFFFFF;
+	color: #6DB966;
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+	font-size: 1.1rem;
+	font-weight: 1000;
+	vertical-align: middle;
+	text-decoration: underline;
+	letter-spacing: 0.15em;
+}
+
+/*------------------------------------------------ MAIN/GENERAL ------------------------------------------------*/
 
 main{
 	background-color: #ffffff;
+	min-height: 100vh;
 }
 
 h1, h2{
 	text-align: center;
 }
 
+/*--------------------------------------------------- INDEX ---------------------------------------------------*/
 
-.welcometext{
-	margin: 4rem;
-	margin-top: 0;
+.welcome h1{
+	display: inline-block;
+	padding: 4rem;
 	text-align: center;
+	width: 100%;
 }
 
-.welcome{
-	text-align: center;
+.welcome p{
+	display: inline-block;
+	padding: 4rem;
+	text-align: justify;
 	font-size: 1.8rem;
-	margin-bottom: 3rem;
 }
 
 /*MENU DE PAGINAS*/
@@ -226,6 +246,25 @@ h1, h2{
 	outline: 0.3rem solid black;
 }
 
+/*----------------------------------------------------- SERIE ------------------------------------------------------*/
+
+.sinopsis {
+	font-size: 1.5rem;
+	background-image: url(../images/banner.jpg);
+	background-size: cover;
+	text-align: justify;
+	line-height: 1.7;
+	letter-spacing: 1.2;
+	color: lightgray ;
+	background-position: bottom;
+}
+
+.sinopsis article{
+	background-color: hsla(0, 0%, 10%, 0.8);
+	padding: 4em;
+}
+
+/*-------------------------------------------------- CHARACTERS ---------------------------------------------------*/
 
 /*MENU DE PERSONAJES*/
 
@@ -252,41 +291,28 @@ h1, h2{
 }
 
 .upbutton{
+	background-color: #6DB966;
 	display: inline-block;
 	width: 4rem;
 	height: 3rem;
 	border-top-left-radius: 50%;
 	border-bottom-left-radius: 50%;
-	background-image: url(../images/up.png);
-	background-color: #6DB966;
-	/*background-size: contain;
-	background-repeat: no-repeat;*/
-	background-size: cover;
-	background-position: bottom;
 	position: fixed;
 	bottom: 10rem;
 	right: 0;
+	padding-left: 0.7rem;
+	padding-top: 0.5rem;
 }
 
-
-
-
-
-.sinopsis {
-	font-size: 1.5rem;
-	background-image: url(../images/banner.jpg);
+.upbutton div{
+	width: 3rem;
+	height: 2rem;
+	background-image: url(../images/up.png);
 	background-size: cover;
-	text-align: justify;
-	line-height: 1.7;
-	letter-spacing: 1.2;
-	color: lightgray ;
 	background-position: bottom;
 }
 
-.sinopsis article{
-	background-color: hsla(0, 0%, 10%, 0.8);
-	padding: 4em;
-}
+/*PERSONAJES*/
 
 .character {
 	background: #060606;
@@ -295,19 +321,24 @@ h1, h2{
 
 .character img{
 	object-fit: contain;
-	padding: 40px;
+	padding: 2rem;
 	display: inline-block;
 	width: 25%;
-	margin-right: 50px;
 }
 .character div{
 	padding: 50px 40px;
-	text-align: center;
+	/*text-align: center;*/
+	text-align: justify;
 	display: inline-block;
 	color: #FFFFFF;
-	font-size: 1.8rem;
+	font-size: 1.7rem;
 }
 
+.character h2{
+	margin-bottom: 1rem;
+}
+
+/*--------------------------------------------------- MEDIA ----------------------------------------------------*/
 .thumbnail {
 	margin: 0.7rem;
 	padding: 0.2em;
@@ -319,23 +350,27 @@ h1, h2{
 	background-color: white;
 }
 
+/*-------------------------------------------------- BACKSTAGE ---------------------------------------------------*/
+
 .info{
-	background-color: grey;
+	background-color: #FFD14A;
+	color: #0062A1;
 	margin-right: 8rem;
 	margin-left: 8rem;
-	outline: 2px solid blue;
 	display: flex;
 	height: 40%;
 	padding: 4rem;
-	font-size: 1.5rem;
+	font-size: 1.7rem;
+	font-weight: 600;
 	justify-content: space-between;
+	outline: solid 0.2rem #0062A1;
 }
 
 .info img{
 	object-fit: contain;
 	display: inline-block;
-	height: 400px;
-	width: 30%;
+	width: 35%;
+	outline: solid 0.2rem #0062A1;
 }
 
 .info p{
@@ -345,7 +380,8 @@ h1, h2{
 	letter-spacing: 1.2;
 }
 
-/*RESEÑAS*/
+/*--------------------------------------------------- REVIEWS ----------------------------------------------------*/
+
 .reviews section{
 	padding: 4rem;
 	outline: solid black 0.1rem;
@@ -361,25 +397,8 @@ h1, h2{
 	text-align: right;
 	margin-right: 5rem;
 }
+/*----------------------------------------------------- ABOUT -----------------------------------------------------*/
 
-/*------------------------------------------------------------------ FOOTER ------------------------------------------------------------------*/
-footer {
-	color: #FFFFFF;
-	background: #5A5A5A;
-	
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	margin: 0 auto;
-	gap: 3rem;
-	padding: 0,5rem 0rem ;
-}
-
-footer p{
-	display: inline-block;
-}
-
-/*FORMULARIO*/
 
 .contacto{
 	background-image: url(../images/colors.jpg);
@@ -390,8 +409,12 @@ footer p{
 	letter-spacing: 1.2;
 }
 
-.contacto article{
+.contacto section{
 	background-color: hsla(0, 0%, 10%, 0.479);
+	min-height: 100vh;
+}
+
+.contacto article{
 	padding: 3rem 5rem 10rem 10rem;
 }
 
@@ -400,6 +423,8 @@ footer p{
 	font-size: 4rem;
 	letter-spacing: 1.8;
 }
+
+/*FORMULARIO*/
 
 input, textarea { 
 	outline: none;
@@ -448,3 +473,20 @@ button:hover {
 	background: #54a14d;
 } 
 
+/*----------------------------------------------------- FOOTER -----------------------------------------------------*/
+
+footer {
+	color: #FFFFFF;
+	background: #5A5A5A;
+	
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: 0 auto;
+	gap: 3rem;
+	padding: 0,5rem 0rem ;
+}
+
+footer p{
+	display: inline-block;
+}
