--- a/css/style.css
+++ b/css/style.css
@@ -351,9 +351,10 @@ h1, h2{
 }
 
 .trailer{
-	width: 100%;
 	padding: 3rem 10rem;
-	height: 40%;
+	display: block;
+	width: 100%;
+	height: 700px
 }
 
 iframe{
@@ -370,6 +371,7 @@ iframe{
 	justify-content: center;
 	column-gap: 0.5rem;
 	row-gap: 1rem;
+	padding-bottom: 2rem;
 
 }
 
