--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,9 @@ body {
 	font-weight: 700;
 }
 
+span{
+	font-style: italic;
+}
 
 /*------------------------------------------------------------------ HEADER Y NAV ------------------------------------------------------------------*/
 
@@ -424,15 +427,15 @@ iframe{
 	line-height: 1.7;
 }
 
-.info span{
-	font-style: italic;
-}
-
 /*--------------------------------------------------- REVIEWS ----------------------------------------------------*/
 
+.awards p{
+	color: #54a14d;
+}
+
 .reviews section{
-	padding: 4rem;
-	outline: solid black 0.1rem;
+	padding: 4rem 6rem;
+	font-size: 1.2rem;
 }
 
 .reviews q{
