--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ body {
 
 span{
 	font-style: italic;
+	white-space: pre;
 }
 
 /*------------------------------------------------------------------ HEADER Y NAV ------------------------------------------------------------------*/
@@ -250,15 +251,15 @@ h1, h2{
 /*----------------------------------------------------- SERIE ------------------------------------------------------*/
 
 .sinopsis{
-	height: 100%;
-	background-color: #6ccbf4e3;
+	display: block;
+	background-image: linear-gradient(to top ,#03b1e7 80%,#1793b8);
 }
 
 .sinopsis p{
 	font-size: 1.5rem;
 	line-height: 1.7;
 	letter-spacing: 1.2;
-	padding: 2rem 5rem;
+	padding: 3rem 5rem;
 }
 
 .sinopsis img{
@@ -429,25 +430,127 @@ iframe{
 
 /*--------------------------------------------------- REVIEWS ----------------------------------------------------*/
 
-.awards p{
-	color: #54a14d;
+.reception{
+	background-color: #FFD14A;
+	padding-top: 2rem;
+}
+
+.reception h1{
+	font-size: 3rem;
+	color: #0062A1;
+	margin-bottom: 2rem;
+}
+
+.reception h2{
+	font-size: 2.8rem;
+	color: #0062A1;
+	margin: 2rem 0;
+}
+
+
+.awards{
+	display: flex;
+	margin: 0 3rem;
+	flex-direction: row;
+	background-color: #0062A1;
+	align-items: center;
+	padding: 2rem;
+	outline: double #0062A1 6px;
+}
+
+
+.awards ul{
+	display: inline-block;
+	font-size: 1.2rem;
+	color: #FFD14A;
+	padding: 0.5rem 0 0.5rem 2rem;
+	width: 60%;
+	margin: 0;
+	list-style: square;
+}
+
+.awards li{
+	margin-bottom: 1rem;
+}
+
+.awards img{
+	object-fit: contain;
+	width: 40%;
+	outline: double #FFD14A 6px;
+}
+
+
+.reviews{
+	padding-bottom: 3rem;
 }
 
 .reviews section{
-	padding: 4rem 6rem;
-	font-size: 1.2rem;
+	color: #FFD14A;
+	margin: 3rem 4rem;
+	margin-bottom: 0;
+	padding: 1rem 2rem 2rem 2rem;
+	font-size: 1.3rem;
+	background-color: #0062A1;
+	border-radius: 3px 100px / 120px;
+	outline: double #024874 6px;
+}
+
+.reviews .left{
+	margin-left: 8rem ;
+}
+
+.reviews .right{
+	margin-right: 8rem ;
 }
 
 .reviews q{
 	display: inline-block;
-	margin-bottom: 3rem;
+	margin: 3rem 3rem;
 }
 
 .reviews a{
 	display: block;
 	text-align: right;
 	margin-right: 5rem;
+	font-size: 1.5rem;
+	color: #FFD14A;
+	font-weight: 100;
+	text-decoration: underline;
 }
+
+.reviews a:hover{
+	color: #f6e1a2;
+	font-weight: 700;
+}
+/*
+.reviews section{
+	color: #fff;
+	margin: 3rem 4rem;
+	margin-bottom: 0;
+	padding: 1rem 3rem 2rem 3rem;
+	font-size: 1.3rem;
+	background-color: #54a14d;
+	border-radius: 10px 100px / 120px;
+	outline: solid #2d5c28 3px;
+}
+
+.reviews q{
+	display: inline-block;
+	margin: 3rem 3rem;
+}
+
+.reviews a{
+	display: block;
+	text-align: right;
+	margin-right: 5rem;
+	color: #FFFFFF;
+	text-decoration: underline;
+}
+
+.reviews a:hover{
+	color: blue;
+}*/
+
 /*----------------------------------------------------- ABOUT -----------------------------------------------------*/
 
 
@@ -527,16 +630,17 @@ button:hover {
 
 footer {
 	color: #FFFFFF;
-	background: #5A5A5A;
-	
+	background: #4c4c4c;
+	font-size: 1.2rem;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	margin: 0 auto;
 	gap: 3rem;
-	padding: 0,5rem 0rem ;
+	padding: .6rem 0rem ;
 }
 
-footer p{
-	display: inline-block;
+footer a, footer a:visited{
+	color: rgba(249, 109, 109, 0.82);
+	text-decoration: underline;
 }
