--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,10 @@ span{
 	white-space: pre;
 }
 
+img{
+	vertical-align:bottom;
+}
+
 /*------------------------------------------------------------------ HEADER Y NAV ------------------------------------------------------------------*/
 
 header {
@@ -58,6 +62,7 @@ header {
 	padding: 0.5rem;
 	padding-right: 0;
 	height: 100%;
+	width: 100%;
 	object-fit: contain;
 }
 
@@ -224,7 +229,9 @@ h1, h2{
 /*MENU DE PAGINAS*/
 
 .redireccion_pages h2{
+	font-size: 2rem;
 	margin: 3rem;
+	margin-bottom: 5rem;
 }
 
 .redireccion_pages section{
@@ -244,7 +251,7 @@ h1, h2{
 	border-radius: 50%;
 	padding: 0.2rem;
 	outline: 0.3rem solid black;
-	max-width: 200px;
+	max-width: 300px;
 }
 
 .redireccion_pages a img:hover{
@@ -658,6 +665,42 @@ footer a, footer a:visited{
 
 	.navigator.active{
 		left:0;
+		justify-content:flex-start;
+	}
+
+	.navigator.active li{
+		width: 100vh;
+		height: 70px;
+	}
+
+	.logo{
+		width: 80%;
+	}	
+
+	/*Resto*/
+
+
+	.redireccion_pages section{
+		flex-direction: column;
+		align-items: center;
+		gap: 2rem;
+	}
+
+	.redireccion_pages section div{
+		width: 100%;
+	}
+
+	.redireccion_pages section div a{
+		width: 70%;
+	}
+
+	.redireccion_pages section div a img{
+		max-width: 400px;
+	}
+
+	.redireccion_pages section div a h4{
+		font-size: 1.9rem;
+		margin-bottom: 2rem;
 	}
 
 }
